# desafio-trainee-back

./: .gitignore  README.md  main.py  manage.py  pyproject.toml
docs/diagrams/: entidade_relacionamento.mmd
fabricio/: asgi.py  settings.py  urls.py  wsgi.py
fabricio/mini_ifood/: apps.py  models.py  serializers.py  views.py
mini_ifood/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
mini_ifood/migrations/: 0001_initial.py
