[project]
name = "desafio-trainee-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.7",
    "djangorestframework>=3.16.1",
]

[tool.ruff]
extend-exclude = ["manage.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "E501"]