[project]
name = "desafio-trainee-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.7",
    "djangorestframework>=3.16.1",
]

[tool.ruff]
extend-exclude = ["manage.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "E501", "COM812"]

[tool.ruff.lint.per-file-ignores]
"**/apps.py" = ["D100", "D101"]
"**/settings.py" = ["D100"]
"**/wsgi.py" = ["D100"]
"**/asgi.py" = ["D100"]
"**/__init__.py" = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"